[package]
name = "sambroomy_orderbook"
version = "0.1.0"
edition = "2024"

[lib]
name = "orderbooklib"
path = "src/lib.rs"
#crate-type = ["cdylib"]

[[bin]]
name = "orderbook-bin"
path = "src/main.rs"

[profile.release]
lto = true
[profile.bench]
debug = true

[dependencies]
uuid = { version = "1.13", features = ["v4", "v7", "v5", "fast-rng"] }
ratatui = "0.29"
crossterm = "0.28.1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
polars = { version = "0.46", features = ["lazy", "fmt"] }
rand = "0.9"
binance_spot_connector_rust = { version = "1.3.0", features = [
    "enable-hyper",
    "enable-tokio-tungstenite",
] }
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "rustls"] }
rust_decimal = "1.36.0"
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.95"
ahash = "0.8.11"
dashmap = "6.1.0"
#pyo3 = { version = "0.18.1", features = ["extension-module"] }


[dev-dependencies]
criterion = "0.5"
rand_distr = "0.5"
#uuid = { version = "1.10", features = ["v7", "fast-rng"] }
[[bench]]
name = "order_benchmark"
path = "benches/order_benchmark.rs"
harness = false
