[package]
name = "techieBoy_orderbook"
version = "0.1.0"
edition = "2024"

[lib]
name = "orderbooklib"
path = "src/lib.rs"

[[bin]]
name = "orderbook-bin"
path = "src/main.rs"

[profile.release]
lto = true
[profile.bench]
debug = true

[dependencies]
rand = "0.9.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "order_benchmark"
harness = false

